#fix #11, pseudo parallax almost working, improve a little bit some style (like overflow scroll in add field)

--- a/css/style.css
+++ b/css/style.css
@@ -23,32 +23,37 @@
 div.popup {
 	position: fixed;
 	top: 10%;
-	right: -10%;
 	/*margin: -75px 0 0 -150px;*/
 	z-index: 100;
 
-	height: 80%;
+	height: 85%;
 	width: 80%;	
 
 	box-shadow: -5px 5px 10px -5px;
 
+	-webkit-border-radius: 7px 0px 0px 7px;
+
 	padding: 20px;
 	padding-right: 15%;
 	padding-left: 15%;
+
 	border: solid 1px #888;
 	background: #fff;
 	display: block;
-	opacity: 0;
+
+	overflow: scroll;
 }
+div.popup-content {
+
+}
+
 div.popup-show {
-	opacity: 1;
+	right: -20px;
 	-webkit-transition: all 400ms;
-	display: block;
 }
 div.popup-hide {
-	opacity: 0;
+	right: -1080px;
 	-webkit-transition: all 400ms;
-	display: none;
 }
 
 .loading {
@@ -119,4 +124,34 @@ li div.btn-group, div.btn-group-vertical {
 }
 
 .new-field.popup {
+}
+
+body {
+	margin: 0px;
+	padding: 0px;
+}
+
+div.parallax {
+	margin: 0px;
+	padding: 0px;
+
+	width: 100%;
+
+}
+
+div#parallax-1 {
+	position: fixed;
+	padding-top: 10%;
+	padding-left: 30%;
+	padding-right: 30%;
+
+	background-color: #ccc;
+	background-attachment: fixed;
+
+}
+div#parallax-2 {
+	position: absolute;
+	background-color: #eee;
+	
+	box-shadow: 0px -3px 4px -2px;
 }
